check/testdata/invalid-legacy-files/ephemeral_with_sidebar_current.html.markdown
---
subcategory: "Example"
sidebar_current: "example_thing"
layout: "example"
page_title: "Example: example_thing"
description: |-
  Example description.
---
<!-- Copyright IBM Corp. 2019, 2026 -->
<!-- SPDX-License-Identifier: MPL-2.0 -->

# Ephemeral: example_thing

Byline.

## Example Usage

```terraform
ephemeral "example_thing" "example" {
  name = "example"
}
```

## Argument Reference

* `name` - (Required) Name of thing.

## Attribute Reference

* `id` - Name of thing.
